Stop displaying scroll position on mobile

--- a/src/components/history-scroll-position.module.css
+++ b/src/components/history-scroll-position.module.css
@@ -35,3 +35,9 @@
   height: 20px;
   width: 20px;
 }
+
+@media (max-width: 480px) {
+  .list {
+    display: none;
+  }
+}
